syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Proto.Users";

message GrpcUser {
  string id = 1;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  bool isDeleted = 6;
}

message GetUsersByIdsResult {
  repeated GrpcUser users = 1;
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}